--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/_GridViewPartial_DebitoBanco_op_x_cruzar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/_GridViewPartial_DebitoBanco_op_x_cruzar.cshtml
@@ -25,6 +25,7 @@
         settings.SettingsBehavior.EnableCustomizationWindow = true;
         settings.SettingsContextMenu.EnableRowMenu = DefaultBoolean.False;
         //Configuracion responsive
+        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
