--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_aprobacion_facturas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_aprobacion_facturas.cshtml
@@ -19,6 +19,7 @@
         settings.SettingsContextMenu.Enabled = true;
         settings.SettingsContextMenu.RowMenuItemVisibility.NewRow = false;
         settings.SettingsBehavior.EnableCustomizationWindow = true;
+        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
 
         //Configuración click derecho
         settings.SettingsContextMenu.Enabled = true;
