--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_ing_inv_oc_x_ingresar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_ing_inv_oc_x_ingresar.cshtml
@@ -19,6 +19,7 @@
         settings.CommandColumn.Visible = true;
         settings.CommandColumn.ShowSelectCheckbox = true;
         settings.CommandColumn.SelectAllCheckboxMode = GridViewSelectAllCheckBoxMode.AllPages;
+        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
 
         //Configuración click derecho
         settings.SettingsContextMenu.Enabled = true;
