--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_ing_inv_os_x_ingresar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_ing_inv_os_x_ingresar.cshtml
@@ -24,6 +24,7 @@
         settings.SettingsContextMenu.Enabled = true;
         settings.SettingsBehavior.EnableCustomizationWindow = true;
         settings.SettingsContextMenu.EnableRowMenu = DefaultBoolean.False;
+        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
 
         //Configuracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
