--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_aprobacion_facturas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/_GridViewPartial_aprobacion_facturas.cshtml
@@ -45,6 +45,7 @@
             {
                 column.PropertiesEdit.DisplayFormatString = "d";
                 sp.Width = Unit.Percentage(100);
+                sp.AllowMouseWheel = false;
             });
             column.EditFormSettings.Visible = DefaultBoolean.False;
             column.ReadOnly = false;
@@ -60,6 +61,7 @@
             {
                 column.PropertiesEdit.DisplayFormatString = "d";
                 sp.Width = Unit.Percentage(100);
+                sp.AllowMouseWheel = false;
             });
             column.EditFormSettings.Visible = DefaultBoolean.False;
             column.ReadOnly = false;
@@ -75,6 +77,7 @@
             {
                 column.PropertiesEdit.DisplayFormatString = "d";
                 sp.Width = Unit.Percentage(100);
+                sp.AllowMouseWheel = false;
             });
             column.EditFormSettings.Visible = DefaultBoolean.False;
             column.ReadOnly = false;
@@ -91,6 +94,7 @@
                 column.PropertiesEdit.DisplayFormatString = "d";
                 sp.Width = Unit.Percentage(100);
                 column.ReadOnly = false;
+                sp.AllowMouseWheel = false;
             });
             column.EditFormSettings.Visible = DefaultBoolean.False;
 
@@ -107,6 +111,7 @@
                 sp.MaxValue = 999999999;
                 sp.Width = Unit.Percentage(100);
                 column.PropertiesEdit.DisplayFormatString = "n2";
+                sp.AllowMouseWheel = false;
             });
             column.EditFormSettings.Visible = DefaultBoolean.False;
 
@@ -122,6 +127,7 @@
                 sp.MaxValue = 999999999;
                 sp.Width = Unit.Percentage(100);
                 column.PropertiesEdit.DisplayFormatString = "n2";
+                sp.AllowMouseWheel = false;
             });
             column.EditFormSettings.Visible = DefaultBoolean.False;
 
@@ -137,6 +143,7 @@
                 p.MinValue = 0;
                 p.DisplayFormatInEditMode = true;
                 p.DisplayFormatString = "N2";
+                p.AllowMouseWheel = false;
             });
         });
         settings.Settings.ShowFooter = true;
