--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/_GridViewPartial_ordencompralocal_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/_GridViewPartial_ordencompralocal_det.cshtml
@@ -98,6 +98,7 @@
             column.EditorProperties().SpinEdit(q =>
             {
                 q.MinValue = 0;
+                q.AllowMouseWheel = false;
                 q.Width = Unit.Percentage(100);
             });
         });
@@ -111,6 +112,7 @@
             column.EditorProperties().SpinEdit(q =>
             {
                 q.MinValue = 0;
+                q.AllowMouseWheel = false;
                 q.Width = Unit.Percentage(100);
             });
             column.EditFormSettings.Visible = DefaultBoolean.True;
@@ -124,6 +126,7 @@
             column.EditorProperties().SpinEdit(q =>
             {
                 q.MinValue = 0;
+                q.AllowMouseWheel = false;
                 q.Width = Unit.Percentage(100);
             });
             column.EditFormSettings.Visible = DefaultBoolean.True;
