--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_GridViewPartial_FacturasSinGuia.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_GridViewPartial_FacturasSinGuia.cshtml
@@ -9,6 +9,7 @@
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
         settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
+        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
 
         settings.SettingsPager.Visible = true;
         settings.Settings.ShowGroupPanel = false;
