--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_GridViewPartial_PGuia_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_GridViewPartial_PGuia_det.cshtml
@@ -12,6 +12,7 @@
         settings.Settings.ShowGroupPanel = false;
         settings.Settings.ShowFilterRow = true;
         settings.SettingsBehavior.AllowSelectByRowClick = false;
+        settings.Settings.AutoFilterCondition = AutoFilterCondition.Contains;
 
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
