--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_GridViewPartial_proforma_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_GridViewPartial_proforma_det.cshtml
@@ -81,6 +81,7 @@
             column.VisibleIndex = 2;
             column.EditorProperties().SpinEdit(q =>
             {
+                q.AllowMouseWheel = false;
                 q.MinValue = 0;
                 q.Width = Unit.Percentage(100);
                 q.ClientSideEvents.ValueChanged = "function(s, e){ CalcularValores();}";
@@ -95,6 +96,7 @@
             column.VisibleIndex = 3;
             column.EditorProperties().SpinEdit(q =>
             {
+                q.AllowMouseWheel = false;
                 q.MinValue = 0;
                 q.Width = Unit.Percentage(100);
                 q.ClientSideEvents.ValueChanged = "function(s, e){ CalcularValores();}";
@@ -109,6 +111,7 @@
             column.VisibleIndex = 4;
             column.EditorProperties().SpinEdit(q =>
             {
+                q.AllowMouseWheel = false;
                 q.MinValue = 0;
                 q.Width = Unit.Percentage(100);
                 q.ClientSideEvents.ValueChanged = "function(s, e){ CalcularValores();}";
