--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_GridViewPartial_NotaCrebitoFacturacion_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_GridViewPartial_NotaCrebitoFacturacion_det.cshtml
@@ -77,6 +77,7 @@
             column.Width = Unit.Percentage(7);
             column.EditorProperties().SpinEdit(q =>
             {
+                q.AllowMouseWheel = false;
                 q.MinValue = 0;
                 q.Width = Unit.Percentage(100);
             });
@@ -89,6 +90,7 @@
             column.Width = Unit.Percentage(7);
             column.EditorProperties().SpinEdit(q =>
             {
+                q.AllowMouseWheel = false;
                 q.MinValue = 0;
                 q.Width = Unit.Percentage(100);
             });
@@ -101,6 +103,7 @@
             column.Width = Unit.Percentage(7);
             column.EditorProperties().SpinEdit(q =>
             {
+                q.AllowMouseWheel = false;
                 q.MinValue = 0;
                 q.Width = Unit.Percentage(100);
             });
