--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/_GridViewPartial_NotaDebitoFacturacion_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeDebitoFacturacion/_GridViewPartial_NotaDebitoFacturacion_det.cshtml
@@ -76,6 +76,7 @@
             column.Width = Unit.Percentage(7);
             column.EditorProperties().SpinEdit(q =>
             {
+                q.AllowMouseWheel = false;
                 q.MinValue = 0;
                 q.Width = Unit.Percentage(100);
             });
@@ -88,6 +89,7 @@
             column.Width = Unit.Percentage(7);
             column.EditorProperties().SpinEdit(q =>
             {
+                q.AllowMouseWheel = false;
                 q.MinValue = 0;
                 q.Width = Unit.Percentage(100);
             });
@@ -100,6 +102,7 @@
             column.Width = Unit.Percentage(7);
             column.EditorProperties().SpinEdit(q =>
             {
+                q.AllowMouseWheel = false;
                 q.MinValue = 0;
                 q.Width = Unit.Percentage(100);
             });
