--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/Modificar.cshtml
@@ -235,7 +235,8 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                GridView_ordencompralocal_det.GetEditor('do_precioCompra').SetValue(data);
+                GridView_ordencompralocal_det.GetEditor('do_precioCompra').SetValue(data.precio);
+                GridView_ordencompralocal_det.GetEditor('IdUnidadMedida').SetValue(data.info_producto.IdUnidadMedida);
             },
             error: function (error) {
             }
