--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenCompraLocal/Nuevo.cshtml
@@ -187,7 +187,6 @@
         var datos = {
             IdEmpresa: $("#IdEmpresa").val(),
             IdProducto: s.GetValue()
-
         }
         $.ajax({
             type: 'POST',
@@ -199,7 +198,10 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                GridView_ordencompralocal_det.GetEditor('do_precioCompra').SetValue(data);
+                console.log(data);
+                GridView_ordencompralocal_det.GetEditor('do_precioCompra').SetValue(data.precio);
+                GridView_ordencompralocal_det.GetEditor('IdUnidadMedida').SetValue(data.info_producto.IdUnidadMedida);
+                GridView_ordencompralocal_det.GetEditor('IdCod_Impuesto').SetValue(data.info_producto.IdCod_Impuesto_Iva);
             },
             error: function (error) {
             }
