--- a/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Compras/Views/OrdenServicio/Modificar.cshtml
@@ -234,7 +234,9 @@
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                GridViewPartial_orden_servicio_det.GetEditor('IdCod_Impuesto').SetValue(data.IdCod_Impuesto_Iva);
+                GridViewPartial_orden_servicio_det.GetEditor('do_precioCompra').SetValue(data.precio);
+                GridViewPartial_orden_servicio_det.GetEditor('IdCod_Impuesto').SetValue(data.info_producto.IdCod_Impuesto_Iva);
+                GridViewPartial_orden_servicio_det.GetEditor('IdUnidadMedida').SetValue(data.info_producto.IdUnidadMedida);
             },
             error: function (error) {
             }
